--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-    <h3>Olá Danki</h3>
+    <section class="main">
+        <div class="center">
+            <div class="menu">
+                <div class="logoMenu">
+                    <a href="/ProjectFrontEndJS/index.html"><img src="images/logoagencia.svg" alt="Logo"></a>
+                </div>
+                <div class="itemsMenu">
+                    <a href="#">Início</a>
+                    <a href="#">Por que nós?</a>
+                    <a href="#">Depoimentos</a>
+                    <a class="contactBtn" href="#">Entre em contato</a>
+                </div> <!-- itemsMenu -->
+            </div> <!-- menu -->
+        </div> <!-- center -->
+    </section> <!-- main -->
 </body>
 </html>
