--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                     <a class="contactBtn" href="#">Entre em contato</a>
                 </div> <!-- itemsMenu -->
             </div> <!-- menu -->
+
+            <div class="mockup">
+                <h1>Promova experiências aos seus clientes</h1>
+                <br/>
+                <p>E veja resultados expressivos dia após dia.</p>
+                <br/>
+                <img src="images/mockup.svg" alt="">
+            </div> <!-- mochup -->
         </div> <!-- center -->
     </section> <!-- main -->
 </body>
