--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
             </div> <!-- mochup -->
         </div> <!-- center -->
     </section> <!-- main -->
+    <section class="marks">
+        <div class="center">
+
+        </div>
+    </section> <!-- marks -->
 </body>
 </html>
