--- a/index.html
+++ b/index.html
@@ -37,8 +37,48 @@
     </section> <!-- main -->
     <section class="marks">
         <div class="center">
-
+            <img src="images/LOGO1.png" alt="">
+            <img src="images/LOGO2.png" alt="">
+            <img src="images/LOGO3.png" alt="">
+            <img src="images/LOGO4.png" alt="">
+            <img src="images/LOGO5.png" alt="">
         </div>
     </section> <!-- marks -->
+    <section class="becauseWe">
+        <div class="center">
+            <h2>Por que nós?</h2>
+            <p>Uma experiência incrível para seus clientes, resultados espetaculares para sua empresa.</p>
+
+            <div class="differentials">
+                <div class="boxDifferentials">
+                    <img src="images/icon1.svg" alt="">
+                    <h3>
+                        Planejamento impecável
+                    </h3>
+                    <p>
+                        Conte com a Agência Bold como sua parceira no planejamento de seus projetos, conteúdos, campanhas, estratégias. Nossos profissionais altamente qualificados estão preparados para qualquer desafio.
+                    </p>
+                </div><!-- boxDifferentials -->
+                <div class="boxDifferentials">
+                    <img src="images/icon2.svg" alt="">
+                    <h3>
+                        Planejamento impecável
+                    </h3>
+                    <p>
+                        Conte com a Agência Bold como sua parceira no planejamento de seus projetos, conteúdos, campanhas, estratégias. Nossos profissionais altamente qualificados estão preparados para qualquer desafio.
+                    </p>
+                </div><!-- boxDifferentials -->
+                <div class="boxDifferentials">
+                    <img src="images/icon3.svg" alt="">
+                    <h3>
+                        Planejamento impecável
+                    </h3>
+                    <p>
+                        Conte com a Agência Bold como sua parceira no planejamento de seus projetos, conteúdos, campanhas, estratégias. Nossos profissionais altamente qualificados estão preparados para qualquer desafio.
+                    </p>
+                </div><!-- boxDifferentials -->
+            </div> <!-- differentials -->
+        </div> <!-- center -->
+    </section> <!-- becauseWe -->
 </body>
 </html>
