--- a/index.html
+++ b/index.html
@@ -80,5 +80,10 @@
             </div> <!-- differentials -->
         </div> <!-- center -->
     </section> <!-- becauseWe -->
+    <section class="cta">
+        <h2>Vamos começar seu projeto?</h2>
+        <h4>Fale agora mesmo com um de nossos consultores!</h4>
+        <a href="/contato">Entrar em contato</a>
+    </section> <!-- cta -->
 </body>
 </html>
