--- a/index.html
+++ b/index.html
@@ -82,8 +82,30 @@
     </section> <!-- becauseWe -->
     <section class="cta">
         <h2>Vamos começar seu projeto?</h2>
-        <h4>Fale agora mesmo com um de nossos consultores!</h4>
-        <a href="/contato">Entrar em contato</a>
+        <h4>Fale com um consultor e tire sua idéia do papel.</h4>
+        <a href="/contato">ENTRAR EM CONTATO</a>
     </section> <!-- cta -->
+    <section class="benefitsForYou">
+        <div class="center">
+            <h1>Benefícios para você</h1>
+            <div class="benefits">
+                <div class="boxBenefits">
+                    <img src="images/checklist.svg" alt="">
+                    <p>Garantia de resultados, pague de acordo com o desempenho do seu projeto ou campanha.</p>
+                </div> <!-- boxBenefits -->
+                <div class="boxBenefits">
+                    <img src="images/checklist.svg" alt="">
+                    <p>Equipe qualificada. Nossos profissionais possuem vasta experiência nacional e no exterior.</p>
+                </div> <!-- boxBenefits -->
+                <div class="boxBenefits">
+                    <img src="images/checklist.svg" alt="">
+                    <p>Acreditamos que trabalhos criativos são os que mais se destacam em meio a multidão. Saia do feijão com arroz.</p>
+                </div> <!-- boxBenefits -->
+            </div> <!-- benefits -->
+            <a href="/contato">ENTRAR EM CONTATO</a>
+            
+        </div> <!-- center -->
+        <img src="images/mackbook.png" alt="">
+    </section> <!-- benefitsForYou -->
 </body>
 </html>
