--- a/index.html
+++ b/index.html
@@ -86,26 +86,19 @@
         <a href="/contato">ENTRAR EM CONTATO</a>
     </section> <!-- cta -->
     <section class="benefitsForYou">
-        <div class="center">
-            <h1>Benefícios para você</h1>
-            <div class="benefits">
-                <div class="boxBenefits">
-                    <img src="images/checklist.svg" alt="">
-                    <p>Garantia de resultados, pague de acordo com o desempenho do seu projeto ou campanha.</p>
-                </div> <!-- boxBenefits -->
-                <div class="boxBenefits">
-                    <img src="images/checklist.svg" alt="">
-                    <p>Equipe qualificada. Nossos profissionais possuem vasta experiência nacional e no exterior.</p>
-                </div> <!-- boxBenefits -->
-                <div class="boxBenefits">
-                    <img src="images/checklist.svg" alt="">
-                    <p>Acreditamos que trabalhos criativos são os que mais se destacam em meio a multidão. Saia do feijão com arroz.</p>
-                </div> <!-- boxBenefits -->
-            </div> <!-- benefits -->
-            <a href="/contato">ENTRAR EM CONTATO</a>
-            
+        <div class="center" style="max-width: 1280px;">
+            <div class="boxBenefits">
+                <h1>Benefícios para você</h1>
+                <p><img src="images/checklist.svg" alt=""><span>Garantia de resultados, pague de acordo com o desempenho do seu projeto ou campanha.</span></p>  
+                <p><img src="images/checklist.svg" alt=""><span>Equipe qualificada. Nossos profissionais possuem vasta experiência nacional e no exterior.</span></p>    
+                <p><img src="images/checklist.svg" alt=""><span>Acreditamos que trabalhos criativos são os que mais se destacam em meio a multidão. Saia do feijão com arroz.</span></p>
+                <a href="/contato">ENTRAR EM CONTATO</a>
+            </div> <!-- boxBenefits --> 
+            <div class="imgBenefits">
+                <img src="images/mackbook.png" alt="">
+            </div>
+                   
         </div> <!-- center -->
-        <img src="images/mackbook.png" alt="">
     </section> <!-- benefitsForYou -->
 </body>
 </html>
